# clickpad-app

./: README.md  SETUP.md  generate-icons.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  config.rs  executor.rs  main.rs  models.rs  shortcut.rs
src/components/: ActionFormModal.tsx  ActionList.tsx  AddActionModal.tsx  CategoryTagManager.tsx  ExecuteModal.tsx  Settings.tsx  Sidebar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/services/: storage.ts
src/stores/: appStore.ts  settingsStore.ts
src/types/: index.ts  settings.ts
